# orquestrador_migracao_opensource

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.migrate/: config.yaml  selection.yaml
.migrate/deployments/: code_airflow_dag_finance_daily_aggregations.yaml  code_vertex_notebook_marketing_attribution_v3.yaml
.migrate/uploads/dags/: uploaded_dag.py
.migrate/uploads/notebooks/: customer_raw.py  orders_raw.ipynb  uploaded_notebook.ipynb
src/migrate/: cli.py
src/migrate/core/: config.py  credentials.py
src/migrate/core/convert/: code.py  ddl.py  llm.py  notebook.py  runner.py  sql.py
src/migrate/core/deploy/: code.py  databricks.py  models.py  runner.py
src/migrate/core/docs/: wiki.py
src/migrate/core/inventory/: bq.py  catalog.py  composer.py  models.py  notebooks.py  sample.py  scanner.py  scheduled_queries.py
src/migrate/core/lineage/: graph.py  parser.py
src/migrate/core/llm/: __init__.py  anthropic_provider.py  bedrock_provider.py  gemini_provider.py  openai_provider.py
src/migrate/core/plan/: waves.py
src/migrate/core/state/: approval.py  audit.py  rollback.py  selection.py
src/migrate/core/validate/: diff.py  profile.py  report.py  runner.py  sample.py
src/migrate/web/: app.py
src/migrate/web/routes/: connections.py  convert.py  deploy.py  docs.py  inventory.py  lineage.py  pages.py  plan.py  review.py  validate.py
src/migrate/web/templates/: _card_anthropic.html  _card_aws.html  _card_bedrock.html  _card_databricks.html  _card_gcp.html  _card_gemini.html  _card_openai.html  _code_conversion_result.html  base.html  (+33 more)
(+1 files in other folders)
